# aviutl2_psdtoolkit2

./: .gitignore  CHANGELOG.md  README.md  build.bash  installer.iss.in
.github/: RELEASE_TEMPLATE.md
.github/workflows/: releaser.yml
src/aul2/: English.PSDToolKit.aul2  简体中文.PSDToolKit.aul2
src/c/: CMakeLists.txt  alias.c  alias.h  anm2.c  anm2.h  anm2_edit.c  anm2_edit.h  anm2_edit_test.c  anm2_script_mapper.c  anm2_script_mapper.h  anm2_script_picker.c  anm2_script_picker.h  anm2_selection_test.c  anm2_test.c  anm2editor.c  anm2editor.h  anm2editor_detail.c  anm2editor_detail.h  anm2editor_import.c  anm2editor_treeview.c  anm2editor_treeview.h  config.c  config.h  config_dialog.c  config_dialog.rc  dllmain.c  i18n.c  i18n.h  ipc.c  ipc.h  layer.c  layer_test.c  psdtoolkit.c  script_module.c  script_module.h  script_module_test.c
src/go/: go.mod  go.sum
src/go/assets/datasrc/: icon.afdesign
src/go/gui/: gui.go  gui_gdip.go
src/go/gui/layerview/: layerview.go
src/go/gui/mainview/: async.go  mainview.go
src/go/gui/tabview/: tabview.go
src/go/img/: image.go
src/go/imgmgr/editing/: editing.go  editing_test.go  requests.go
src/go/ipc/: ipc.go
src/go/locale/: locale.go
src/go/nkhelper/: gdip.go
src/i18n/: ja.po.DO_NOT_EDIT  zh_CN.po.DO_NOT_EDIT
src/lua/@PSDToolKit.anm2/: anim_bounce.lua  anim_enter_exit.lua  blinker.lua  draw.lua  lipsync.lua  lipsync_jp.lua
src/lua/@PSDToolKit.obj2/: init.lua  overwriter.lua  psd.lua  voice_prep.lua
src/lua/PSDToolKit.lua/: PSD.lua  init.lua
src/lua/PSDToolKitHandler.lua/: psd.lua  template.lua  util.lua  wav.lua
